--- a/.github/workflows/playwright_ddt.yml
+++ b/.github/workflows/playwright_ddt.yml
@@ -24,7 +24,7 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Ejecutar pruebas de Login DDT
-        run: npx playwright test tests/login_ddt.spec.js
+        run: npx playwright test login_ddt.spec.js
 
       - name: Subir reportes
         uses: actions/upload-artifact@v4
