--- a/.github/workflows/playwright_ddt.yml
+++ b/.github/workflows/playwright_ddt.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install
 
       - name: Instalar navegadores Playwright
-        run: npx playwright install --with-deps
+        run: npx playwright install chromium --with-deps
 
       - name: Ejecutar pruebas de Login DDT
         # 2. SIMPLICIDAD: Al ya tener la BASE_URL arriba, el comando queda limpio
