--- a/.github/workflows/playwright_ddt.yml
+++ b/.github/workflows/playwright_ddt.yml
@@ -29,8 +29,8 @@ jobs:
         run: ./node_modules/.bin/playwright install --with-deps chromium
 
       - name: Ejecutar pruebas de Login DDT
-        # Eliminamos el nombre del archivo para que Playwright escanee todo
-        run: npx playwright test --reporter=html
+        # ✅ Forzamos a Playwright a mirar el archivo específico en la raíz
+        run: npx playwright test ./login_ddt.spec.js --reporter=html
 
       - name: Subir Reporte HTML
         uses: actions/upload-artifact@v4
