--- a/.github/workflows/playwright_ddt.yml
+++ b/.github/workflows/playwright_ddt.yml
@@ -29,9 +29,7 @@ jobs:
         run: ./node_modules/.bin/playwright install --with-deps chromium
 
       - name: Ejecutar pruebas de Login DDT
-        # ✅ Usamos la bandera -c /dev/null para ignorar configs restrictivas
-        # y forzamos la busqueda en el directorio actual
-        run: npx playwright test . --config=playwright.config.js --reporter=html
+        run: npx playwright test --reporter=html
 
       - name: Subir Reporte HTML
         uses: actions/upload-artifact@v4
